@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-09-00
+2013-10-08 Andy Salnikov
+- hdf5 generator: replace generated append() method with store_at() which
+  takes additional index argument
+- add support for "default" tag in schema definition
+
 Tag: V00-08-18
 2013-09-24 Andy Salnikov
 - fix _sizeof() generation for BldDataAcqADCV1
